[tool.poetry]
name = "suno-api"
version = "0.1.2"
description = "Unofficial Python library for Suno AI API: make a song with Suno using v3 🥳"
packages = [
    {include = "suno"}
]
authors = ["Yi ZHANG <yizhang.dev@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://pypi.org/project/suno-api"
repository = "https://github.com/imyizhang/suno-api"
documentation = "https://suno-api.readthedocs.io/en/latest/"

[tool.poetry.scripts]
suno = "suno.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
curl_cffi = "^0.6.1"
typer = {extras = ["all"], version = "^0.10.0"}
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"